--- a/package.json
+++ b/package.json
@@ -27,8 +27,6 @@
   },
   "homepage": "https://github.com/simpliroute/simpli-sdk-node.git#readme",
   "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/dotenv": "6.1.1",
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.5",
     "jest": "^24.8.0",
@@ -40,8 +38,5 @@
     "tslint-xo": "0.16.0",
     "typescript": "^3.5.1"
   },
-  "dependencies": {
-    "axios": "^0.19.0",
-    "url-search-params-polyfill": "^6.0.0"
-  }
+  "dependencies": {}
 }
