--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Simpliroute domain objects and use cases written in TypeScript.",
   "main": "dist/index.js",
+  "private": false,
   "scripts": {
     "start": "ts-node ./src/index.ts",
     "build": "tsc",
