--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@simpliroute/core",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Simpliroute domain objects and use cases written in TypeScript.",
   "main": "dist/index.js",
-  "private": false,
   "scripts": {
     "start": "ts-node ./src/index.ts",
     "build": "tsc",
@@ -11,15 +10,8 @@
     "test": "jest --coverage --verbose",
     "test:watch": "jest --verbose --watch"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/simpliroute/simpliroute-core-ts.git"
-  },
-  "keywords": [
-    "SimpliRoute",
-    "Core",
-    "Domain"
-  ],
+  "repository": "git+https://github.com/simpliroute/simpliroute-core-ts.git",
+  "keywords": ["Typescript", "Node", "SimpliRoute", "domain", "core"],
   "author": "SimpliRoute Developers <developers@simpliroute.com>",
   "license": "MIT",
   "bugs": {
@@ -27,16 +19,14 @@
   },
   "homepage": "https://github.com/simpliroute/simpliroute-core-ts.git#readme",
   "devDependencies": {
-    "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.5",
-    "jest": "^24.8.0",
-    "merge": "1.2.1",
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.4",
+    "@typescript-eslint/eslint-plugin": "2.2.0",
+    "@typescript-eslint/parser": "2.2.0",
+    "eslint": "6.3.0",
+    "jest": "24.9.0",
     "ts-jest": "^24.0.2",
-    "ts-lint": "4.5.1",
     "ts-node": "^8.2.0",
-    "tslint": "^5.17.0",
-    "tslint-xo": "0.16.0",
-    "typescript": "^3.5.1"
-  },
-  "dependencies": {}
+    "typescript": "3.6.2"
+  }
 }
