--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,21 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "es6",
-        "noImplicitAny": true,
-        "noImplicitReturns": true,
-        "noImplicitThis": true,
-        "esModuleInterop": true,
-        "sourceMap": true,
-        "diagnostics": false,
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "listEmittedFiles": false,
-        "listFiles": false,
-        "moduleResolution": "node",
-        "alwaysStrict": true,
-        "declaration": true,
-        "outDir": "dist",
-        "types": [
-            "jest",
-            "node"
-        ]
-    },
-    "exclude": [
-        "./node_modules",
-        "./**/*.test.ts",
-        "./**/*.spec.ts"
-    ],
-    "include": [
-        "./src/**/*.ts"
-    ]
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "es6",
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "esModuleInterop": true,
+    "sourceMap": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "listEmittedFiles": false,
+    "listFiles": false,
+    "moduleResolution": "node",
+    "alwaysStrict": true,
+    "declaration": true,
+    "outDir": "dist",
+    "types": ["jest", "node"]
+  },
+  "include": ["./src/**/*.ts"]
 }
