Extracting from src primary files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,15 @@
     "alwaysStrict": true,
     "declaration": true,
     "outDir": "dist",
-    "types": ["jest", "node"]
+    "types": [
+      "jest",
+      "node"
+    ]
   },
-  "include": ["./src/**/*.ts"]
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "./**/*.ts"
+  ]
 }
