--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,22 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "target": "es6",
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "esModuleInterop": true,
-    "sourceMap": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "listEmittedFiles": false,
-    "listFiles": false,
-    "moduleResolution": "node",
-    "alwaysStrict": true,
-    "declaration": true,
-    "outDir": "dist",
-    "types": [
-      "jest",
-      "node"
-    ]
-  },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "./**/*.ts"
-  ]
+    "compilerOptions": {
+        "module": "commonjs",
+        "target": "es6",
+        "noImplicitAny": true,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "esModuleInterop": true,
+        "sourceMap": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "listEmittedFiles": false,
+        "listFiles": false,
+        "moduleResolution": "node",
+        "alwaysStrict": true,
+        "declaration": true,
+        "outDir": "dist",
+        "types": ["jest", "node"]
+    },
+    "exclude": ["node_modules"],
+    "include": ["./**/*.ts"]
 }
